# maelstrom

./: Cargo.toml  README.md
.github/workflows/: rust.yml
book/: book.toml
book/src/: SUMMARY.md  the_dream.md  the_manual.md  the_project.md
book/src/dream/: spaceships.md
book/src/dream/battles/: battlestar.md
book/src/dream/characters/: motivations.md  skills.md  staff.md  you.md
book/src/dream/exploration/: navigating.md
book/src/dream/planning/: planning.md  projects.md
book/src/dream/spaceships/: damage.md  resource_consumption.md
book/src/project/: v01.md  v02.md
book/utils/: milestone.py
src/: lib.rs  state.rs
src/entities/: mod.rs  spaceships.rs
src/mechanics/: mod.rs
src/mechanics/game_time/: mod.rs
src/ui/: interactions.rs  mod.rs
src/ui/interface/: mod.rs  resource.rs  text.rs  ui_bundle.rs
src/ui/interface/sidebar/: interaction.rs  mod.rs  spaceship.rs
src/ui/interface/timer/: mod.rs
src/ui/sprites/: mod.rs  planets.rs  spaceships.rs
