[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6.0"
num = "0.4.0"

strum = "0.23"
strum_macros = "0.23"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1


